[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-sys = { version = "0.52.0", features = [
	"Win32_Foundation", 
	"Win32_System", 
	"Win32_System_Threading", 
	"Win32_System_Memory",
	"Win32_UI_WindowsAndMessaging",
	"Win32_Graphics_Gdi",
	"Win32_System_LibraryLoader",
	"Win32_Graphics_OpenGL",
	"Win32_Media",
	"Win32_Media_Audio",
	"Win32_Media_Multimedia",
]}

[features]
default = []
sanity = []

[profile.release]
panic = "abort"
strip = true
codegen-units = 1
opt-level = "z"
